infra/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/protocol: "https"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Faz o Nginx falar HTTPS com o Argo
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" # Permite que o certificado do Argo chegue ao navegador
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
